# srec-pocketsphinx-js

./: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.in  emcc_continuous.sh  emcc_continuous_nofiles.sh  emcc_srec_file.sh  emcc_srec_noembed.sh  libtool  mdef_conv_TEST  test_pocketsphinx_js.sh  test_ps.c
doc/: Makefile  Makefile.in  doxyfile
include/: Makefile  Makefile.in
js/: libpocketsphinx.js  pocketsphinx_continuous.js  pre.js
js/test/emcc-test/: hello_world.c  test.sh
model/: Makefile  Makefile.in
model/hmm/: Makefile  Makefile.in
model/lm/: Makefile  Makefile.in
python/: Makefile  Makefile.in  setup.py
scripts/: Makefile  Makefile.in
src/: Makefile  Makefile.in
src/gst-plugin/: Makefile  Makefile.in
src/libpocketsphinx/: Makefile  Makefile.in  fsg_search.c  ngram_search.c  pocketsphinx.c  tied_mgau_common.h
src/libpocketsphinx/.deps/: acmod.Plo  bin_mdef.Plo  blkarray_list.Plo  dict.Plo  dict2pid.Plo  fsg_history.Plo  fsg_lextree.Plo  fsg_search.Plo  hmm.Plo  mdef.Plo  ms_gauden.Plo  ms_mgau.Plo  ms_senone.Plo  ngram_search.Plo  ngram_search_fwdflat.Plo  ngram_search_fwdtree.Plo  phone_loop_search.Plo  pocketsphinx.Plo  ps_alignment.Plo  ps_lattice.Plo  ps_mllr.Plo  ptm_mgau.Plo  s2_semi_mgau.Plo  state_align_search.Plo  tmat.Plo  vector.Plo
src/programs/: Makefile  Makefile.am  Makefile.in  continuous.c  srec_file.c  test_raw_ps.c
src/programs/.deps/: batch.Po  continuous.Po  mdef_convert.Po
test/: Makefile  Makefile.in  testfuncs.sh
test/regression/: Makefile  Makefile.in
test/unit/: Makefile  Makefile.in
(+6 files in other folders)
